k8s/namespace.yaml
# File: k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: sshoney
  labels:
    name: sshoney
    app.kubernetes.io/name: sshoney
